// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickToCopyButton renders default 1`] = `
.emotion-0 {
  background-repeat: no-repeat;
  display: inline-block;
}

.emotion-1 {
  cursor: pointer;
}

.emotion-2 {
  background-repeat: no-repeat;
  display: inline-block;
  cursor: pointer;
}

.emotion-3 {
  vertical-align: middle;
  fill: currentColor;
}

.emotion-3 use {
  pointer-events: none;
}

<ClickToCopyButton
  textToCopy="text to copy"
  tooltipContent="Copied to clipboard"
>
  <ClickToCopy
    textToCopy="text to copy"
    tooltipContent="Copied to clipboard"
  >
    <Box
      bgImageOptions={
        Object {
          "position": undefined,
          "repeat": undefined,
          "size": undefined,
        }
      }
      data-cy="box"
      display="inline-block"
      tag="div"
    >
      <div
        className="emotion-0"
        data-cy="box"
      >
        <Tooltip
          id="copyTooltip1"
          isOpen={false}
          suppress={true}
          trigger={
            <Clickable
              action={[Function]}
              disableFocusOutline={false}
              role="button"
              tabIndex={0}
            >
              <Box
                bgImageOptions={
                  Object {
                    "position": undefined,
                    "repeat": undefined,
                    "size": undefined,
                  }
                }
                data-cy="box"
                display="inline-block"
                tag="span"
              >
                <Icon
                  shape="system-clipboard"
                  size="s"
                />
              </Box>
            </Clickable>
          }
        >
          <span
            data-cy="tooltip"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
          >
            <Dropdownable
              dropdown={
                <TooltipContent
                  id="copyTooltip1"
                  isOpen={false}
                  maxWidth={300}
                >
                  Copied to clipboard
                </TooltipContent>
              }
              isOpen={false}
              preferredDirections={
                Array [
                  "top",
                  "top-start",
                  "top-end",
                  "bottom",
                  "bottom-start",
                  "bottom-end",
                ]
              }
            >
              <div>
                <Clickable
                  action={[Function]}
                  disableFocusOutline={false}
                  role="button"
                  tabIndex={0}
                >
                  <Box
                    bgImageOptions={
                      Object {
                        "position": undefined,
                        "repeat": undefined,
                        "size": undefined,
                      }
                    }
                    className="emotion-1"
                    data-cy="box"
                    display="inline-block"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                    tag="span"
                  >
                    <span
                      className="emotion-2"
                      data-cy="box"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <Icon
                        shape="system-clipboard"
                        size="s"
                      >
                        <svg
                          aria-label="system-clipboard icon"
                          className="emotion-3"
                          data-cy="icon"
                          height={24}
                          preserveAspectRatio="xMinYMin meet"
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <use
                            xlinkHref="#system-clipboard"
                          />
                        </svg>
                      </Icon>
                    </span>
                  </Box>
                </Clickable>
              </div>
            </Dropdownable>
          </span>
        </Tooltip>
      </div>
    </Box>
  </ClickToCopy>
</ClickToCopyButton>
`;

exports[`ClickToCopyButton renders with custom children 1`] = `
.emotion-0 {
  background-repeat: no-repeat;
  display: inline-block;
}

.emotion-1 {
  cursor: pointer;
}

<ClickToCopyButton
  textToCopy="text to copy"
  tooltipContent="Copied to clipboard"
>
  <ClickToCopy
    textToCopy="text to copy"
    tooltipContent="Copied to clipboard"
  >
    <Box
      bgImageOptions={
        Object {
          "position": undefined,
          "repeat": undefined,
          "size": undefined,
        }
      }
      data-cy="box"
      display="inline-block"
      tag="div"
    >
      <div
        className="emotion-0"
        data-cy="box"
      >
        <Tooltip
          id="copyTooltip2"
          isOpen={false}
          suppress={true}
          trigger={
            <Clickable
              action={[Function]}
              disableFocusOutline={false}
              role="button"
              tabIndex={0}
            >
              <div
                className="emotion-0"
              >
                custom children
              </div>
            </Clickable>
          }
        >
          <span
            data-cy="tooltip"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
          >
            <Dropdownable
              dropdown={
                <TooltipContent
                  id="copyTooltip2"
                  isOpen={false}
                  maxWidth={300}
                >
                  Copied to clipboard
                </TooltipContent>
              }
              isOpen={false}
              preferredDirections={
                Array [
                  "top",
                  "top-start",
                  "top-end",
                  "bottom",
                  "bottom-start",
                  "bottom-end",
                ]
              }
            >
              <div>
                <Clickable
                  action={[Function]}
                  disableFocusOutline={false}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="emotion-1"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    custom children
                  </div>
                </Clickable>
              </div>
            </Dropdownable>
          </span>
        </Tooltip>
      </div>
    </Box>
  </ClickToCopy>
</ClickToCopyButton>
`;
